# QtCMake

./: README.md
Qt4/: CMakeLists.txt
Qt4/src/: example_form.cpp  example_form.h  example_form.ui  main.cpp  qtdemo.cpp  qtdemo.h  qtdemo.ui  ui_qtdemo.h
Qt5/: CMakeLists.txt  README.md
